modified the code to avoid unwanted wraps

--- a/src/index.css
+++ b/src/index.css
@@ -307,6 +307,14 @@ a:hover {
     margin-right: 0.6rem;
 }
 
+#saved-icon {
+    height: 2rem;
+}
+
+#explore-icon {
+    height: 2.5rem;
+}
+
 .theme::backdrop {
     background-color: var(--bg);
 }
@@ -588,10 +596,16 @@ hr {
         padding: 0.8rem 1.2rem;
     }
     .options p {
-        font-size: 1.4rem;
+        font-size: 1.3rem;
+    }
+    #saved-icon {
+        height: 1.75rem;
+    }
+    #explore-icon {
+        height: 2rem;
     }
     .options span {
-        font-size: 1rem;
+        font-size: 0.9rem;
         margin: 0.5rem 0;
     }
     .options button {
